--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@ class: center, middle
 class: center, middle
 # Thank You!
 ![image](done-small.png) ![image](clojure-ball-small.png)
+---
+class: center, middle
+# Questions?
+![image](done-small.png) ![image](clojure-ball-small.png)
 
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
