--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ class: center, middle
 
 * Learning
 
- * Extend existing Clojure zealotry into client-side
+ * Extend existing Clojure zealotry to client-side
 
  * Complete a project to solidify skills
 ---
@@ -132,6 +132,7 @@ class: center, middle
 # Next Steps: Data
 * Normalization
  * Deciding on target track length
+
  * Standardizing track titles
 
 * Scaling up
