add some image slides

--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@ class: center, middle
 
 * "I learned a lot"
 ---
+class: center, middle
+## Learning Sample: React + Re-Frame
+
+![image](re-frame_flow.png)
+---
 # Goals Not Met
 
 * Incomplete Functionality
@@ -130,16 +135,21 @@ class: center, middle
 # Next Steps
 ---
 # Next Steps: Data
-* Normalization
- * Deciding on target track length
-
- * Standardizing track titles
-
 * Scaling up
 
  * Adding tracks currently manual
 
  * Leaning on user feedback requires users
+
+* Normalization
+ * Deciding on target track length
+
+ * Standardizing track titles
+---
+class: middle, center
+## Track Length and "Type" Examples
+![image](wagner.png)
+![image](beethoven.png)
 ---
 # Next Steps: Application
 
