final image work

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@ class: center, middle
 
  * Leaning on user feedback requires users
 
-* Normalization
+* Standardization
  * Deciding on target track length
 
- * Standardizing track titles
+ * Aesthetic track titles
 ---
 class: middle, center
-## Track Length and "Type" Examples
+## Track Length and Name Examples
 ![image](wagner.png)
 ![image](beethoven.png)
 ---
